--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Photon</title>
+    <title>Photon - HD Photo Finder</title>
   </head>
   <body>
     <header>
